fixed skills section padding on mobile

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -6,6 +6,7 @@
     text-align: center;
     min-height: 100vh;
     padding-bottom: 5%;
+    margin-top: 10%
   }
   
 
