--- a/src/components/SkillContainer/SkillContainer.css
+++ b/src/components/SkillContainer/SkillContainer.css
@@ -20,6 +20,8 @@
       grid-template-columns: 1fr; 
       gap: 20px; 
       margin-bottom: 28%;
+      padding-left:15px;
+      padding-right: 15px;
     }
   }
   
