--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -21,7 +21,7 @@
 
   @media (max-width: 768px) {
     #skills-section {
-      padding: 10px;
+      padding: 15px;
     }
     h1 {
       margin-top: 22%;
